Fixed first image container clipping on project pages

--- a/mobilestylesheet.css
+++ b/mobilestylesheet.css
@@ -37,7 +37,6 @@ img{
     Width:100%;
     height:41%;
     max-height: 425px;
-    background:#ffffff;
     display:inline-block;
     margin-bottom: 40px;
 }
@@ -52,7 +51,6 @@ img{
     Width:100%;
     height:41%;
     min-height: 525px;
-    background:#ffffff;
     display:inline-block;
     margin-bottom: 40px;
 }
