--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,6 @@ img{
     Width:100%;
     height:41%;
     min-height: 400px;
-    background:#ffffff;
     display:block;
 }
 #volumeiconon{
